--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@
 title: L.E.A.R.N.
 # email: doerfler@tum.de
 description: >- # this means to ignore newlines until "baseurl:" 
-   L.earning E.nvironment for A.rchitectural Robotics for Newbies
+   L.earning E.nvironment for A.rchitectural R.obotics for N.ewbies
 #  Write an awesome description for your new site here. You can edit this
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
