--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,45 +1,25 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: L.E.A.R.N.
-# email: doerfler@tum.de
-description: >- # this means to ignore newlines until "baseurl:" 
-   L.earning E.nvironment for A.rchitectural R.obotics for N.ewbies
-#  Write an awesome description for your new site here. You can edit this
-#  line in _config.yml. It will appear in your document head meta (for
-#  Google search results) and in your feed.xml site description.
+# Permalinks
+permalink:        pretty
+#relative_permalinks: true
 
-baseurl: "/le-ar-n" # the subpath of your site, e.g. /blog
+# Setup
+title:            L.E.A.R.N.
+tagline:          'L.E.A.R.N.'
+description:      'L.earning E.nvironment for A.rchitectural R.obotics for N.ewbies'
+baseurl: "/le-ar-n/" # the subpath of your site, e.g. /blog
 url: "https://le-ar-n.github.io/le-ar-n/" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-# github_username:  jekyll
 
-# Build settings
-markdown: kramdown
-theme: minima
+paginate:         5
+
+# Custom vars
+#version:          2.1.0
+
+github:
+  repo:           https://github.com/le-ar-n/le-ar-n
+
 plugins:
   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
